@@ -1,0 +1,9 @@
+Module:v_v2k  File:verilog/v_v2k.v
+  Port:clk  Dir:in  Type:wire  Array:
+  Port:rst  Dir:in  Type:wire  Array:
+  Port:sig1  Dir:in  Type:wire  Array:
+  Port:sig2  Dir:out  Type:wire  Array:
+  Net:clk  O  Type:wire  Array:
+  Net:rst  O  Type:wire  Array:
+  Net:sig1  O  Type:wire  Array:  WIDTH:0
+  Net:sig2  I  Type:wire  Array:  WIDTH:0
